style: handle big number of events, fix style on mobile

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -3,6 +3,10 @@
   width: 4px;
 }
 
+.small-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
 @media screen and (min-width: 668px) {
   /* width */
   ::-webkit-scrollbar {
